DT-2469, fix horizontal scroll on mobile

--- a/less/widgets.less
+++ b/less/widgets.less
@@ -13,6 +13,7 @@
             margin: 50px auto 0;
         }
         @media @tablet {
+            width: auto;
             margin: 15px 0 0;
         }
     }
